src/main/resources/styles/dashboard/buttons.css
.root {
    -fx-font-family: Arial;
}

.submitOffenseButton {
    -fx-pref-width: 90;
    -fx-pref-height: 37;
    -fx-background-color: navy;
    -fx-spacing: 5;
    -fx-font-size: 12;
    -fx-text-fill: white;
}
.submitOffenseButton:hover {
    -fx-background-color: blue;
}

.cancelButton {
    -fx-pref-width: 90;
    -fx-pref-height: 37;
    -fx-background-color: white;
    -fx-border-color: navy;
    -fx-text-fill: navy;
}
.submitButton {
    -fx-pref-width: 120;
    -fx-pref-height: 80;
    -fx-background-color: #2090ff;
    -fx-spacing: 5;
    -fx-font-size: 18;
    -fx-text-fill: white;
}
.cancelButton:hover {
    -fx-background-color: navy;
    -fx-text-fill: white;
}
.submitButton:hover {
    -fx-background-color: #0000FF;
}
.offenseTabButton {
    -fx-font-size: 15;
    -fx-background-color: rgba(0,0,0,0);
    -fx-border-color: rgba(191, 191, 191, 0.62);
}
.offenseTabButton:focused{
    -fx-background-color: #76baff;
}
.addButton {
    -fx-pref-width: 200;
    -fx-background-color: #0057ae;
}
.addButton Button{
    -fx-background-color: rgba(0,0,0,0);
    -fx-font-size: 15;
    -fx-text-fill: white;
}
.addButton:hover {
    -fx-background-color: #0000FF;
}
.dashboardButtons{
    -fx-cursor: hand;
    -fx-border: none;
    -fx-pref-width: 200;
    -fx-background-color: transparent;
    -fx-padding:10 0 10 40;
    -fx-spacing:15;
    -fx-alignment: center-left;
    -fx-font-weight: bold;
    -fx-font-size: 20;
    -fx-max-width: infinity;
}
.dashboardButtons:hover {
    -fx-background-color: rgba(0, 0, 255, 0.22);
}

